kubernetes/apps/authentik/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-backend
  namespace: authentik
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kube-system
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: longhorn-system
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: adguard
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: home-automation
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: rustfs
  to:
    - group: ""
      kind: Service
      name: authentik-server
