kubernetes/apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-app-wildcard
  hostnames:
    - auth.${CLUSTER_DOMAIN}
    - auth.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io/
      backendRefs:
        - name: authentik-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
